--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,7 +22,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build Docker image
-      run: docker build -t ghcr.io/${{ github.repository_owner }}/ue19-lab-05:latest .
+      run: docker build -t ghcr.io/${{ github.repository_owner }}/gso/tree/main/Labo5/ue19-lab-05:latest .
 
     - name: Push Docker image
-      run: docker push ghcr.io/${{ github.repository_owner }}/ue19-lab-05:latest
+      run: docker push ghcr.io/${{ github.repository_owner }}/gso/tree/main/Labo5/ue19-lab-05:latest
