--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,8 +21,10 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build Docker image
-      run: docker build -t app -f ghcr.io/${{ github.repository_owner }}/gso/tree/main/Labo5/ue19-lab-05 .
-
-    - name: Push Docker image
-      run: docker push ghcr.io/${{ github.repository_owner }}/gso/tree/main/Labo5/ue19-lab-05:latest
+    - name: Build and push Docker image
+        id: push
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: Labo5/ue19-lab-05/Dockerfile
+          push: true
