--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: 'ghcr.io/hugosko/gso:main:${{ github.sha }}'
+          image-ref: 'ghcr.io/hugosko/gso:main'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
